tests/valid/strings.lang
func main() {
    var str: [_]char = "Hello";
    var c_str: *char = c"Hello";
}
