tests/invalid/invalid_subscript.lang
proc "c" main() void {
    var a: i32 = 123;
    var b: i32 = a[0];
}
